[package]
name = "iroha_crypto"
version = "0.1.0"
authors = ["Egor Ivkov <e.o.ivkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ursa = { git="https://github.com/hyperledger/ursa.git", branch="master", default-features=false, features=["hashes", "ed25519", "ecdsa_secp256k1"] }
serde = { version = "1.0", features = ["derive"] }
parity-scale-codec = { version = "1.3", features = ["derive"] }
hex = "0.4.0"

[dev-dependencies]
hex-literal = "0.2.1"
serde_json = "1.0"
